--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Saykot's Portfolio</title>
 </head>
 <body>
-    <h1>Welcome To Saykot's Website</h1>
+    <section>
+        <div class="half-weith">
+            <h1>Welcome To Saykot's Website</h1>
+        </div>
+        <div class="half-weith">
+            <img src="images/saykot.jpg" alt="saykot image">
+        </div>
+    </section>
 </body>
 </html>
